# Smart-Pathing

./: .gitignore  Edge.cpp  Readme.md  Street.cpp  Subject.cpp  Vertex.cpp  main.h
Dokumentation_Ausarbeitung/: Abstract.tex  Dokumentation.aux  Dokumentation.out  ErrorBeiDistributedBoost.txt  Kurzbeschreibung.docx  NotzizenRami.txt  SmartCars_Langfassung.aux  SmartCars_Langfassung.out  SmartCars_Langfassung.tex  SmartCars_Langfassung.toc  SmartPathing_Langfassung.tex  TODO.txt  backup.pptx  chris_kladde.txt  final_presentation.pptx  grundüberlegung.txt  jobChris.err  paposmart.gliffy  textChris.txt
Dokumentation_Ausarbeitung/Audio/: AnimationB.m4a  EinleitungLösungsansatz.m4a  LaufzeitenSeq.m4a  Medien1.m4a  Medien2.m4a  Medien4.m4a  Medien6.m4a  Medien7a.m4a  MedienT3.m4a  Modellbeschreibung.m4a  PerformanceAnalRoutingB.m4a  Preprocessing.m4a
Dokumentation_Ausarbeitung/Konzeptionelles/: DijkstraSequenziell.txt  Konzept.tex  Kurzbeschreibung2.docx  SmartCars.pptx
Dokumentation_Ausarbeitung/Prasentation/: notizen.txt
Implementierung/: CreateMovie.bat  DrawPictures.bat  GenerateDataFromMap.bat  GenerateOnePicture.bat  Visualize.bat  configure  makefile  readme.md  run.sh
Implementierung/Output/: 100.txt  103.txt  105.txt  107.txt  108.txt  109.txt  110.txt  112.txt  113.txt  114.txt  115.txt  116.txt  118.txt  120.txt  122.txt  124.txt  125.txt  126.txt  127.txt  129.txt  133.txt  137.txt  138.txt  14.txt  141.txt  142.txt  144.txt  152.txt  153.txt  154.txt  155.txt  156.txt  160.txt  163.txt  164.txt  (+111 more)
Implementierung/test/: CMakeLists.txt  empty-test.c  grid.c
(+402 files in other folders)
